--- a/index.html
+++ b/index.html
@@ -26,33 +26,30 @@
 <!--header-->
 <header class="header" id="header">
   <div class="title-header">
-    <p>Welcome to My Page</p>
+    <h1>Welcome to My Page</h1>
   </div>
 </header>
 
 <header class="top-header" id="top-header">
- <div class="container">
-  <div class="row">
-    <ul class="top-header-list">
-      <li class="top-header-item">
-        <a href="port-project.html">Projects</a></li>
+  <ul class="top-header-list">
+    <li class="top-header-item">
+      <a href="port-about.html">About Me</a>
+    </li>
 
-      <li class="top-header-item">
-        <a href="port-about.html">About Me</a></li>
-      </div>
-    </div>
-   </div>
- </div>
+    <li class="top-header-item">
+      <a href="port-project.html">Projects</a>
+    </li>
+  </ul>
 </header>
 
 <header class="main-header" id="main-header">
   <div class="container">
-    <div class="row">
-      <div class="col">
+   <div class="row">
+    <div class="col">
       <div class="col-6 col-sm-12">
         <div class="header">
-          <p>Hello There! I'm Lawrenciya Haywood. Welcome All!</p>
-          </div>
+          <h1>Hello There! I'm Lawrenciya Haywood. Welcome All!</h1>
+        </div>
         </div>
       </div>
     </div>
@@ -123,31 +120,26 @@
 <footer>
   <section class="footer-section1">
     <div class="contact-header">
-      <p>Contacts</p>
+      <h1>Contacts</h1>>
     </div>
   </section>
 
 <section class="footer-section2">
-  <div class="container">
-    <div class="row">
-      <ul class="footer-item-list">
-        <div class="col-6 col-sm-4">
-          <li class="footer-item">
-            <p>Email</p>
-            <p>lawrenciya@mscodingacademics.org</p>
-          </li>
-        </div>
+  <ul class="footer-list">
+    <li class="footer-list-item">
+      <p>Email</p>
+      <p>lawrenciya@mscodingacademics.org</p>
+    </li>
 
-        <div class="col-6 col-sm-4">
-          <li class="footer-item">
-            <p>Twitter</p>
-            <p><a href="https://twitter.com/home">@LawrenciyaH</a></p>
-          </li>
-        </div>
+    <li class="footer-list-item">
+      <p>Twitter</p>
+      <p><a href="https://twitter.com/home">@LawrenciyaH</a></p>
+    </li>
+        </ul>
        </div>
       </ul> 
+     </div>
     </div>
-   </div>
   </div>
 </section>
 </footer>
