--- a/port-about.html
+++ b/port-about.html
@@ -10,9 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
-
-   
+    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">   
      <!--CSS-->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
@@ -27,7 +25,7 @@
 <header>
   <header class="about-header" id="header">
     <div class="about-header-title">
-      <p>More About Me</p>
+      <h1>More About Me</h1>
     </div>
 
     <div class="main-page-link">
@@ -42,19 +40,19 @@
 <nav class="top-header-nav" id="header">
   <div class="container">
     <div class="row">
-      <div class="col-6 col-sm-4">
+      <div class="col-12 col-sm-4">
         <figure><img src="media/image7.jpg" alt="placeholder img" class="img-fluid" /></figure>
         <figcaption class="about-text">I am easy-going.
         <svg class="icon icon-happy"><use xlink:href="#icon-happy"></use></svg></p></figcaption>
       </div>
 
-      <div class="col-6 col-sm-4">
+      <div class="col-12 col-sm-4">
         <figure><img src="media/image8.jpg" alt="placeholder img" class="img-fluid" /></figure>
         <figcaption class="about-text">I am content.
         <svg class="icon icon-cool"><use xlink:href="#icon-cool"></use></svg></p></figcaption>
       </div>
 
-      <div class="col-6 col-sm-4"> 
+      <div class="col-12 col-sm-4"> 
         <figure><img src="media/image9.jpg" alt="placeholder img" class="img-fluid" /></figure>
         <figcaption class="about-text">I just go with the flow.
         <svg class="icon icon-grin"><use xlink:href="#icon-grin"></use></svg></p></figcaption>
@@ -67,15 +65,15 @@
 
 <!--main-->
 <section class="about-section1" id="section">
-    <header class="bio-header">
-     <p>About Me</p>
-    </header>
+  <header class="bio-header">
+    <h1>About Me</h1>
+  </header>
 </section>
 
 <section class="about-section2" id="section">
   <div class="container">
     <div class="row">
-      <div class="col-md-11">
+      <div class="col-md-12">
         <p>Hello there everyone! My name is Lawrenciya Haywood. I am a coder student, and I was born and raise in Jackson, Mississippi. I am a person that likes to live life one step at a time.</p>
         <p>I'm enjoy drawing, and I am self-taught myself ever since I was young. I graduated from Forest Hill High School. I like watching Youtube, and I like playing video games from time to time.</p>
       </div>
