--- a/port-project.html
+++ b/port-project.html
@@ -23,33 +23,33 @@
 </head>
 <body>
  <header class="project-header" id="header">
-    <div class="project-title" id="header">
-        <p>Projects</p>
-    </div>
+  <div class="project-title" id="header">
+    <h1>Projects</h1>
+  </div>
 
-    <div class="main-page-link">
-        <a href="portfolio.html">Return back to Home Page</a>
-    </div>
+  <div class="main-page-link">
+    <a href="portfolio.html">Return back to Home Page</a>
+  </div>
 
-    <div class="about-me-link1">
-        <a href="port-about.html">About Me</a>
-    </div>
+  <div class="about-me-link1">
+    <a href="port-about.html">About Me</a>
+  </div>
 </header>
 
 <main>
   <div class="project-section" id="main">
     <div class="project-title1">
-      <p>My Work</p>
+      <h1>My Work</h1>
     </div>
 
   <div class="project-section">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
-          <figure><img src="media/bloom screenshot.png" alt="placeholder img" class="img-fluid"/></figure>
-          <figcaption class="project-list">Bloom Project</figcaption>
-          <button class="project-button"><a href="https://github.com/lhaywood12/bloom">Github Link</a></button>
-        </div>
+       <div class="col-sm-6">
+        <figure><img src="media/bloom screenshot.png" alt="placeholder img" class="img-fluid"/></figure>
+        <figcaption class="project-list">Bloom Project</figcaption>
+        <button class="project-button"><a href="https://github.com/lhaywood12/bloom">Github Link</a></button>
+      </div>
         
         <div class="col-sm-6">
           <figure><img src="media/venedor screenshot.png" alt="placeholder img" class="img-fluid"/></figure>
