--- a/port-about.html
+++ b/port-about.html
@@ -29,12 +29,13 @@
     </div>
 
     <div class="main-page-link">
-        <a href="portfolio.html">Return back to Home Page</a>
+      <a href="portfolio.html">Return back to Home Page</a>
     </div>
 
     <div class="project-link">
       <a href="port-project.html">Projects</a>
     </div>
+  </header>
 </header>
 
 <nav class="top-header-nav" id="header">
@@ -57,9 +58,9 @@
         <figcaption class="about-text">I just go with the flow.
         <svg class="icon icon-grin"><use xlink:href="#icon-grin"></use></svg></p></figcaption>
       </div>
-     </div>
-   </div>
-  </nav>
+    </div>
+  </div>
+</nav>
 </header>
 <!--end header-->
 
