--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <header class="header" id="header">
   <div class="title-header">
     <h1>Welcome to My Page</h1>
+    <figure class="header-image"><img src="media/photoimage.jpg" alt="placeholder img" class="img-fluid" /></figure>
   </div>
 </header>
 
@@ -49,7 +50,6 @@
       <div class="col-6 col-sm-12">
         <div class="header">
           <h1>Hello There! I'm Lawrenciya Haywood. Welcome All!</h1>
-        </div>
         </div>
       </div>
     </div>
@@ -91,7 +91,7 @@
   <!--end carousel-->
 
 <section class="section2" id="section">
- <div class="container">
+  <div class="container">
     <div class="row">
       <div class="col-sm-4">
         <figure><img src="media/image1.jpg" alt="placeholder img" class="img-fluid" /></figure>
@@ -112,7 +112,7 @@
       </div>
     </div>
   </div>
- </section>
+</section>
 </main>
 <!--end main-->
 
@@ -135,12 +135,7 @@
       <p>Twitter</p>
       <p><a href="https://twitter.com/home">@LawrenciyaH</a></p>
     </li>
-        </ul>
-       </div>
-      </ul> 
-     </div>
-    </div>
-  </div>
+  </ul>
 </section>
 </footer>
 <!--end footer-->
